# cin7core-python

./: LICENSE  README.md  pyproject.toml
src/cin7core/: __init__.py  api.py  client.py  endpoints.py  errors.py
