[project]
name = "cin7core"
version = "0.0.1"
authors = [
  { name="Dominique Bischof", email="dominique@compostnow.org" },
]
description = "Barebones python wrapper for Cin7Core API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CompostNow/cin7core-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
